fix the weird spacing for medical results

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1042,7 +1042,3 @@ a.link--inherit {
 .clickable:hover {
     cursor: pointer;
 }
-
-#medicalDetails {
-    margin-top: 7em;
-}
